# pixel-level-clustering-btc

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  build_docker.sh  entrypoint.sh  pyproject.toml  start_notebook.sh
Submission/UICC_classification/: 01-tma_meta.ipynb
Submission/cluster_fraction/: calculate_fraction.py
Submission/cluster_fraction/config/: config.yaml
Submission/cluster_fraction/log/: classify_stage.log.2022-08-27  classify_stage.log.2022-08-28
Submission/feature_extraction/shannon/: README.md  extract.py  extract.sh  multirun.yaml
Submission/kmeans_clustering/: README.md  multirun.yaml  predict.py  predict.sh  train.py  train.sh  visualize_human.ipynb  visualize_mouse.ipynb
Submission/kmeans_clustering/config/: config.yaml
Submission/shannon_by_status/: multirun.yaml  quantify.sh  quantify_shannon.py  ttest_species.csv  visualize.ipynb
Submission/shannon_by_status/config/: config.yaml
Submission/tumor_fraction/: calculate_pixel_counts.py  visualize.ipynb
Submission/tumor_fraction/config/: config.yaml
meta/: human_tma_20220112.csv
modules/draft/labeling/: __init__.py  image_processing.py  label.py  resolution.py
modules/eda/: __init__.py  _git.py  _resolve.py
modules/eda/feature_analysis/: __init__.py  _entropy.py  _extract_features.py  _transform.py  _unet_predict.py  _util.py  _watershed.py
modules/hpi/clustering/: __init__.py  region_clustering.py
modules/logger/: __init__.py  logger.py
modules/mask/: __init__.py  contours.py
modules/nn/: __init__.py  model.py  unet.py
(+38 files in other folders)
